syntax = "proto3";

package config;

option go_package = "github.com/cosmos/ibc-go/tx-cardano";

message UpdatePathConfigRequest {
  string path = 1;
}

message UpdatePathConfigResponse {
}

message ShowPathConfigRequest {
}

message ShowPathConfigResponse {
  string path =1;
}

service ConfigService {
  rpc UpdatePathConfig(UpdatePathConfigRequest) returns (UpdatePathConfigResponse) {};
  rpc ShowPathConfig(ShowPathConfigRequest) returns (ShowPathConfigResponse) {};
}
